--- a/ad-l4-1.0/style.css
+++ b/ad-l4-1.0/style.css
@@ -27,4 +27,36 @@ html {
   .menu li a:hover {
     background-color: #111;
   }
-  
+  footer {
+    background-color: #624E88;
+    color: white;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+
+.left, .center, .right {
+    flex: 1;
+}
+
+.center {
+    text-align: center;
+}
+
+.right {
+    text-align: center;
+}
+
+.left ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.left ul li {
+    margin: 5px 0;
+}
