--- a/ad-l4-1.0/style.css
+++ b/ad-l4-1.0/style.css
@@ -2,6 +2,7 @@ html {
     height: 100%;
     width: 100%;
     font-family: Poppins;
+    overflow-y: auto;
   }
 
   .menu {
@@ -37,7 +38,7 @@ html {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
 }
@@ -90,4 +91,73 @@ h4 {
   justify-content: center;
   gap: 25%;
   margin: 0 20px 0 20px;
+}
+main {
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+form {
+  max-width: 100%;
+  padding: 10px;
+  margin: 0 auto;
+}
+
+form label {
+  margin-bottom: 10px;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+button {
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+
+button:hover {
+  background-color: #9217b8;
+}
+
+/* --------- Pseudoclase para focus ----------- */
+input:focus, textarea:focus {
+  border-color: #d41bd4;
+  outline: none;
+}
+
+.logo-contacto{
+  width: 15%;
+  border: 4px solid #e6d9a2;
+  display: block;
+  margin: auto;
+}
+
+.login-container {
+  background-color: rgba(103, 44, 138, 0.2);
+  padding: 40px;
+  border-radius: 15px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra */
+  margin-bottom: 20px; /* Espacio entre las tarjetas */
+  backdrop-filter: blur(10px);
+  
+}
+
+.icon-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.lock-icon {
+  width: 50px;
 }
