--- a/ad-l4-1.0/style.css
+++ b/ad-l4-1.0/style.css
@@ -2,12 +2,22 @@ html {
     height: 100%;
     width: 100%;
     font-family: Poppins;
+}
+
+.somos{
+  background-color: #E6D9A2;
+  font-family: 'Poppins', Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
 
   .menu {
     list-style-type: none;
     margin: 0;
     padding: 0;
     display: flex;
+    position: relative;
     justify-content: center;
     background-color: #624E88;
   }
@@ -158,4 +168,37 @@ input:focus, textarea:focus {
 
 .lock-icon {
   width: 50px;
+}
+
+.pet-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+
+.pet-box {
+  background-color: #fcacd9;
+  padding: 10px;
+  border-radius: 10px;
+  max-width: 180px;
+  text-align: center;
+  border: 2px dotted #8967B3; /* Borde punteado de color */
+}
+
+.image-border {
+  background-color: #fff; /* Fondo blanco de cajas que rodean las imagenes */
+  border: 3px solid #E6D9A2; /* Borde blanco alrededor de las imagenes */
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 10px; /* Espacio entre imagenes y texto */
+}
+
+.pet-image {
+  width: 100%;
+  height: 250px;
+  object-fit: contain;
+  border-radius: 10px;
 }
